examples/simple/undefined/UB-STDLIB1-bad.output
Error: UB-STDLIB1
Description: Called realloc on memory not allocated by malloc, or already freed.
Type: Undefined behavior.
See also: C11 sec. 7.22.3.5:3, J.2:1 item 179
  at realloc(UB-STDLIB1-bad.c:6)
  at main(UB-STDLIB1-bad.c:6)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
